--- a/index.css
+++ b/index.css
@@ -22,9 +22,26 @@ body {
 
 /* "Click the heart" মেসেজের স্টাইল */
 .message {
+  margin-top: 50px;
   font-size: 18px;
-  color: #0f0408;
+  color: #1a080f;
   font-weight: bold;
+}
+.koto {
+  background-color: rgb(192, 192, 24);
+}
+.pink {
+  color: rgb(228, 24, 184);
+  font-weight: 800;
+  font-size: 20px;
+}
+.salma {
+  font-weight: 700;
+  font-size: 33px;
+  color: rgb(243, 17, 243);
+  background-color: black;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 /* "Click the heart" মেসেজ লুকানো হবে যখন হার্ট ক্লিক হবে */
@@ -59,6 +76,9 @@ body {
 /* শেষের প্যারাগ্রাফের জন্য bold স্টাইল */
 .text p:last-child {
   font-weight: bold;
+}
+.signature {
+  color: tomato;
 }
 
 /* লেখা যখন দেখানো হবে */
